Native/Test/KL/CORE-164.kl
/*
 *  Copyright 2010-2012 Fabric Technologies Inc. All rights reserved.
 */

operator entry( )
{
	switch( 0 )
	{
	case 0:
		break;
	case 1:
		break;
	var Integer blah[];
	
	}
}
